# ChangeLog for app-doc/vilearn
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-doc/vilearn/ChangeLog,v 1.14 2014/09/28 10:05:16 hattya Exp $

  28 Sep 2014; Akinori Hattori <hattya@gentoo.org> vilearn-1.0.ebuild:
  update HOMEPAGE and SRC_URI wrt bug #507898

  10 Aug 2014; Patrick Lauer <patrick@gentoo.org> vilearn-1.0.ebuild:
  Fix description for more repoman happy

  19 Dec 2011; Jeremy Olexa <darkside@gentoo.org> vilearn-1.0.ebuild:
  add -macos keywords as tested in bug 319845

  19 Dec 2011; Akinori Hattori <hattya@gentoo.org> vilearn-1.0.ebuild:
  fixes bug #319845.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  08 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  18 Feb 2006; Akinori Hattori <hattya@gentoo.org> vilearn-1.0.ebuild:
  remove app-editors/vi from RDEPEND. fixes bug #122197.

  05 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> vilearn-1.0.ebuild:
  Stable on ppc.

  21 Apr 2005; Stephanie Lockwood-Childs <wormo@gentoo.org>
  vilearn-1.0.ebuild:
  marked ~ppc

  21 Apr 2005; Simon Stelling <blubb@gentoo.org> vilearn-1.0.ebuild:
  stable on amd64

  19 Dec 2004; Jason Huebel <jhuebel@gentoo.org> vilearn-1.0.ebuild:
  ~amd64

  03 Mar 2004; Akinori Hattori <hattya@gentoo.org> vilearn-1.0.ebuild:
  marked stable on x86.

*vilearn-1.0 (18 Feb 2004)

  18 Feb 2004; Akinori Hattori <hattya@gentoo.org> metadata.xml,
  vilearn-1.0.ebuild:
  Initial revision. Ebuild submitted by Michael C. Ferguson <mcf@augustmail.com>
  in bug #41812.