@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST vilearn-1.0.tar.gz 15687 SHA256 8ccdbb57d8ab2c55c4a76734d3aebd6ebbeda1ab1cef887eca31a79da5b299c8 SHA512 5bb53d6eece6025eb0c3dfb90badba12ba3996658af63cac09773c1db455dd7211014a3b3c5f8bd4bb6a709303ee1d6d370805401ca5807ac3c171f774ec91ee WHIRLPOOL 9568f9fe299f167f9eec887b5caf5a1465e797d88b99498c70ece1588f996f094334404c840bbcf198042d1600c8c47a0e71eaee4cbd5bdb05bd529fb2761650
-EBUILD vilearn-1.0.ebuild 722 SHA256 f83e04e94951bf5379f241230bafbce2cf37ee958d9df038306a90faa4d8261b SHA512 b35f86599916568a1e6fcc1d240625d52b9c209e7ed60ce87731bea6ded7a7f202bdb1c7932cc4906f4bfc02c1222ed8ba8e9789a36714fb02d43bbe43d8257b WHIRLPOOL 4b6bf52d3c70f49725cbe0dab55011ed5024468de9183922ab42daa1a5003a4c47cb448063a4b2158031df6a415c31a5b45fb2941644862e35be84e7935d2a04
-MISC ChangeLog 1650 SHA256 6d8fcd5918e6ca9cc83de11f81fe58d17919c7bebfd3c97353ebb520c210f32a SHA512 1c1732a38e338144fa2f29461964608ee5d18f782e1f17331dd0cac8b0245e65682d0eb2abb5010fe76ebb7a83c9059902f2ad84340e27752a1fdaeaa43bdbcf WHIRLPOOL 293843bbfed071eba706f6904b34e5a0dc6e8615df79a4c54e9870688c7a48502b0b61b4a59ed54a24bf771fb93312d3d01aa60eefa0070011551261679b1371
+EBUILD vilearn-1.0.ebuild 702 SHA256 1bd4216a7996277788911603ecda4aa9e5548b0330f8e98991f907b1a0300bd5 SHA512 9766053b0514ebe00f8d7b57da4e5d2ed9268700a640ed183c8f7cf1932cbb20fae08582736c8c8318f5bfeacbdc79442419ec6bca74dbebbd6da83925c2f2e0 WHIRLPOOL bd28c182c7815faff7f941613f78cf0c26dfafca33e97789e8c526a796ed8f8c7e3078297f87e47fa56ec2fa002ed6fee018135c3b96633af2ddcdbac85f7db1
+MISC ChangeLog 1741 SHA256 307e17c103023eeccc6bd829ece547b9c30c7997dca6e3054800b3810719912f SHA512 bdacf98d2ca4b7d5d13be54c41b832e5438e831a93ae60568f8e025e14df79be2ea2227380cd16694f38dfb47bc5388bac3ca8efc9872e8b15e8dbbc1f79bfca WHIRLPOOL 72bc7558ccb2ab8ab5033e381f19dc602c32eaa47475386ce84dd494a713bae8b18e4298b8f3646ff667f829d86d46dacb99fe79567de489ff67858b1f981f2f
 MISC metadata.xml 207 SHA256 131271f902267c3eb067a7b0316b1e2598d5cc32a4528edb37d50ea2f4b262e0 SHA512 5a94c029f35e9fe05a2ce6678db9a67aa9c0f78ed03b48e267b53db983c8bdc8f8cf2d5001e3c4074ddbe04526547f38576981f660d165c1a7908fa5eeaa20c6 WHIRLPOOL 8928372826be281072bdd0c064b1da6f8f10c220972343090083285052fd64608239840ec7ba9a313c7c5cf3309619fdd023a6fa49fbaf97311b5b6333e93b5a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlQn3WUACgkQL46suuyRem1j7ACfbtzyfVigJ+R4iA5p7zOzSjvu
-9+IAnilgsXVdCnLaEeN/Pi5JO3Fu1ul1
-=exy8
+iEYEAREIAAYFAlQn3bcACgkQL46suuyRem17YwCdF/xH8DGvPp90N3J1+0Z4uzEX
+7WoAnRos6J3ldk1LSsKnKdi4IwmbXyua
+=aqwQ
 -----END PGP SIGNATURE-----
