@@ -1,8 +1,8 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-doc/vilearn/vilearn-1.0.ebuild,v 1.13 2014/09/28 10:05:16 hattya Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-doc/vilearn/vilearn-1.0.ebuild,v 1.14 2014/09/28 10:06:37 hattya Exp $
 
-EAPI="4"
+EAPI="5"
 
 DESCRIPTION="vilearn is an interactive vi tutorial comprised of 5 tutorials for the vi-impaired"
 HOMEPAGE="https://wiki.gentoo.org/wiki/No_homepage"
@@ -14,7 +14,6 @@ KEYWORDS="amd64 ppc x86 ~ppc-macos ~x86-macos"
 IUSE=""
 
 RDEPEND="app-editors/vim"
-DEPEND="${RDEPEND}"
 
 src_prepare() {
 	sed -i "s:/usr/local:${EPREFIX}/usr:" Makefile
