@@ -1,6 +1,9 @@
 # ChangeLog for app-doc/vilearn
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-doc/vilearn/ChangeLog,v 1.14 2014/09/28 10:05:16 hattya Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-doc/vilearn/ChangeLog,v 1.15 2014/09/28 10:06:37 hattya Exp $
+
+  28 Sep 2014; Akinori Hattori <hattya@gentoo.org> vilearn-1.0.ebuild:
+  update to EAPI 5
 
   28 Sep 2014; Akinori Hattori <hattya@gentoo.org> vilearn-1.0.ebuild:
   update HOMEPAGE and SRC_URI wrt bug #507898
